fix  footer and display on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ footer {
     body {
         justify-content: center;
         background: linear-gradient(90deg, blue, lightblue);
-        gap: 3rem;
+        gap: 2rem;
     }
 
     header {
@@ -194,7 +194,7 @@ footer {
     footer {
         position: static;
         font-size:1rem;
-        margin-top: 10px;
+        margin-top: 45px;
     }
 }
 
@@ -205,7 +205,8 @@ footer {
     }
     
     body {
-        justify-content: space-between;
+        display: block;
+        height:auto;
         background: linear-gradient(90deg, blue, lightblue);
     }
     header {
@@ -233,7 +234,7 @@ footer {
     footer {
         position: static;
         font-size: 0.7rem;
-        margin-top: 30px;
+        margin-top: 40px;
     }
 }
 
